# AVGraphics

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/steven/avgraphics/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: beauty.frag  camera_effect.frag  camera_effect.vert  texture.frag  texture.vert  video_player.frag  watermark.frag  watermark.vert  yuv_renderer.vert
app/src/main/cpp/: AssetAudioPlayer.cpp  AssetAudioPlayer.h  AudioEngine.h  AudioRecorder.cpp  AudioRecorder.h  BQAudioPlayer.cpp  BQAudioPlayer.h  log.h  native-lib.cpp  sles.cpp
app/src/main/cpp/common/: AVInfo.h  AVModel.cpp  AVModel.h  ThreadSafeQueue.h  Yuv.h  YuvProcessor.cpp  YuvProcessor.h  format.cpp  format.h  log.h  pixfmt.cpp  pixfmt.h  result.h
app/src/main/cpp/ffcodec/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  FrameFilter.cpp  FrameFilter.h  Transcoder.cpp  Transcoder.h  ffcodec.cpp  ffcodec.h  ffheader.h
app/src/main/cpp/ffmpeg/include/libavcodec/: mediacodec.h  vda.h  videotoolbox.h
app/src/main/cpp/ffmpeg/include/libavfilter/: avfilter.h
app/src/main/cpp/ffmpeg/include/libavformat/: avformat.h  avio.h
app/src/main/cpp/ffmpeg/include/libavutil/: bswap.h  common.h  intreadwrite.h  pixfmt.h
app/src/main/cpp/ffmpeg/include/libswresample/: swresample.h
app/src/main/cpp/gles/: Beauty.cpp  Beauty.h  CameraEffect.cpp  CameraEffect.h  Circle.cpp  Circle.h  EGLCore.cpp  EGLCore.h  EGLDemo.cpp  EGLDemo.h  FboRenderer.cpp  FboRenderer.h  GLCamera.cpp  GLCamera.h  GLDemo.h  Shape.cpp  Shape.h  Square.cpp  Square.h  Texture.cpp  Texture.h  TextureImage.cpp  TextureImage.h  Triangle.cpp  Triangle.h  Watermark.cpp  Watermark.h  YuvRenderer.cpp  YuvRenderer.h  gles.cpp  glutil.cpp  glutil.h
app/src/main/cpp/libyuv/source/: convert_to_i420.cc
app/src/main/cpp/sles/: AssetAudioPlayer.cpp  AssetAudioPlayer.h  AudioEngine.h  AudioRecorder.cpp  AudioRecorder.h  BQAudioPlayer.cpp  BQAudioPlayer.h  sles.cpp
app/src/main/cpp/util/: Yuv.cpp  log.h  pixfmt.h  result.h
app/src/main/cpp/yuv/: AVModel.cpp  AVModel.h  Yuv.cpp  Yuv.h  YuvProcessor.cpp  YuvProcessor.h  format_util.cpp  format_util.h  util.cpp  util.h
app/src/main/java/com/steven/avgraphics/: BaseActivity.java  BaseApplication.java
app/src/main/java/com/steven/avgraphics/activity/: AudioActivity.java  Camera2Activity.java  CameraActivity.java  DrawImageActivity.java  FFmpegActivity.java  GLTriangleActivity.java  HWCodecActivity.java  MainActivity.java  OpenGLActivity.java  OpenSLActivity.java  VideoPlayActivity.java
app/src/main/java/com/steven/avgraphics/activity/gles/: BeautyActivity.java  CameraEffectActivity.java  EGLCircleActivity.java  FboActivity.java  GLCameraActivity.java  JavaTriangleActivity.java  JniTriangleActivity.java  MatrixTransformActivity.java  ShapeActivity.java  TextureActivity.java  TextureImageActivity.java  TriangleActivity.java  VaoVboActivity.java  WatermarkActivity.java
app/src/main/java/com/steven/avgraphics/module/av/: AVInfo.java  AudioRecorder.java  FFCodec.java  Format.java  HWCodec.java  HWCodecCommon.java  HWDecoder.java  HWRecorder.java  HWRecorderWrapper.java  OnDecodeListener.java
app/src/main/java/com/steven/avgraphics/ui/: AudioActivity.java  Camera2Activity.java  CameraActivity.java  DrawImageActivity.java  HWCodecActivity.java  HWRecordActivity.java  MainActivity.java  OpenSLActivity.java
app/src/main/java/com/steven/avgraphics/util/: AudioRecorder.java  Camera2Helper.java  CameraHelper.java  HWCodec.java  ToastHelper.java  Utils.java
app/src/main/java/com/steven/avgraphics/view/: CameraPreviewView.java  DrawableSurfaceView.java  DrawableView.java
app/src/main/res/anim/: cpv_focus.xml  cpv_indicator.xml
app/src/main/res/layout/: activity_audio.xml  activity_beauty.xml  activity_camera.xml  activity_camera2.xml  activity_camera_effect.xml  activity_draw_image.xml  activity_eglcircle.xml  activity_fbo.xml  activity_ffmpeg.xml  activity_glcamera.xml  activity_gltriangle.xml  activity_hwcodec.xml  activity_hwrecord.xml  activity_java_triangle.xml  activity_jni_triangle.xml  activity_main.xml  activity_matrix_transform.xml  activity_opengl.xml  activity_opensl.xml  activity_shape.xml  activity_texture.xml  activity_texture_image.xml  activity_triangle.xml  activity_vao_vbo.xml  activity_video_play.xml  activity_watermark.xml
app/src/main/res/values/: attrs.xml  dimens.xml  strings.xml
app/src/test/java/com/steven/avgraphics/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
